name: denknerd
version: 0.1.0.0
build-type: Simple
cabal-version: >= 1.18
executable site
  main-is: site.hs
  build-depends: base == 4.*
               , hakyll == 4.6.*
               , system-filepath
               , directory
               , text
               , bytestring
               , monads-tf
               , split >= 0.2
               , monad-logger
               , time
  ghc-options: -threaded
  default-language: Haskell2010
